--- a/proyecto formulario/styles.css
+++ b/proyecto formulario/styles.css
@@ -17,16 +17,16 @@ h1{
     margin-right: 20px;
 }
 .send{
-    border-top: gray solid 1px;
+    border: lightgray solid 1px;
     background-color: lightgray;
-    padding-left: 1050px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+
+    margin-left: 20px;
+    margin-right: 20px;
 }
 #botones{
     border-radius: 20px;
     padding-right: 7px;
-    color: lightgray;
+    color: gray;
     margin-right: 100px;
     padding-top: 2px;
     padding-bottom: 2px;
@@ -34,3 +34,12 @@ h1{
 .boton{
     margin-left: 230px ;
 }
+.error-input {
+    background-color: #f8d7da !important; 
+  }
+
+.error-message {
+    color: #721c24; 
+    font-size: 80%;
+    margin-top: 4px;
+  }
